--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@unik/web",
+  "name": "@unik/admin",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/postcss": "latest",
     "clsx": "latest",
     "firebase": "latest",
     "framer-motion": "latest",
@@ -18,7 +18,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "latest",
-    "tailwind-merge": "latest"
+    "tailwind-merge": "latest",
+    "react-colorful": "latest"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -30,3 +31,4 @@
     "typescript": "latest"
   }
 }
+
