--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,20 +51,26 @@ jobs:
         run: pnpm add -g vercel@latest
         
       - name: Pull Vercel Environment (Web)
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=production
         working-directory: frontend/web
         env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           
       - name: Build (Web)
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --prod
         working-directory: frontend/web
         env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           
       - name: Deploy (Web)
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --prod
         working-directory: frontend/web
         env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
 
