--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,40 +34,40 @@ jobs:
       - name: Type check (Web)
         run: cd frontend/web && pnpm tsc --noEmit
 
-  # Web 배포
-  deploy-web:
-    runs-on: ubuntu-latest
-    needs: lint
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 9
-          
-      - name: Install Vercel CLI
-        run: pnpm add -g vercel@latest
-        
-      - name: Pull Vercel Environment (Web)
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: frontend/web
-        env:
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          
-      - name: Build (Web)
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: frontend/web
-        env:
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          
-      - name: Deploy (Web)
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: frontend/web
-        env:
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  # Web 배포 - Vercel 자동 배포 사용으로 비활성화
+  # deploy-web:
+  #   runs-on: ubuntu-latest
+  #   needs: lint
+  #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     
+  #     - name: Setup pnpm
+  #       uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 9
+  #         
+  #     - name: Install Vercel CLI
+  #       run: pnpm add -g vercel@latest
+  #         
+  #     - name: Pull Vercel Environment (Web)
+  #       run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+  #       working-directory: frontend/web
+  #       env:
+  #         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
+  #         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  #         
+  #     - name: Build (Web)
+  #       run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+  #       working-directory: frontend/web
+  #       env:
+  #         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
+  #         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  #         
+  #     - name: Deploy (Web)
+  #       run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+  #       working-directory: frontend/web
+  #       env:
+  #         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_WEB }}
+  #         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
 
