feat: support origin-based pricing and dates
Add origin-specific pricing and travel dates for tours, update admin editor to manage them, and adjust public pages/registration to display and store origin-aware info. Also refine home/overview hero quick info and route View Tour Details to itinerary.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "KBL ALL STAR Tour - Philippines to Korea Travel Package",
   "scripts": {
+    "dev": "pnpm -r --parallel --filter @unik/web --filter @unik/functions dev",
     "dev:web": "pnpm --filter @unik/web dev",
     "dev:admin": "pnpm --filter @unik/admin dev",
     "build:web": "pnpm --filter @unik/web build",
